<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChildActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="168dp"
        android:layout_marginTop="-50dp"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="413dp"
        android:layout_height="186dp"
        android:layout_marginBottom="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vector_bg" />

    <Button
        android:id="@+id/button3"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_button"
        android:fontFamily="@font/tttravels_bold"
        android:onClick="setBD"
        android:text="@string/add_child_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tttravels_bold"
        android:gravity="center"
        android:text="@string/add_child"
        android:textColor="@color/purple_add"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="413dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/childLastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/childName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/childFatherName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/father_name"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:padding="10dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"

            android:background="@drawable/custom_input"

            android:entries="@array/SmesiNames" />


        <EditText
            android:id="@+id/RegActivityBirthDay"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/birthday"
            android:inputType="datetime"
            android:maxLength="10"
            android:minHeight="48dp"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Age"
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="Возраст"
                android:inputType="date"
                android:maxLength="2"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="369dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/weight"

                android:inputType="date"
                android:minHeight="48dp"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>